finished prepare facebook login

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,6 +41,11 @@ $colors: (
   dark:       #222
 );
 
+.logo {
+  width: 40%;
+  height: 50px;
+}
+
 
 // App iOS Variables
 // --------------------------------------------------
